# erc20-server

./: Cargo.toml  README.md
db/migrations/: 1_init.sql
src/: add.rs  auth_token.rs  baseconvert.rs  comn_addr.rs  db.rs  handlers.rs  lib.rs  main.rs  read.rs  update.rs  utils.rs
src/add/: crate_item.rs
src/handlers/: addr.rs  coin.rs  crate_item.rs  crates.rs  stripe.rs
src/read/: addr.rs  crate_item.rs  crates.rs
src/update/: coin.rs
tests/: handlers_addr.rs  handlers_coin.rs  handlers_crate_item.rs  handlers_crates.rs  routes.rs
tests/common/: mod.rs
tests/fixtures/: addr_key.sql  comn_coin.sql  crate.sql  crate_access.sql  crate_item.sql  crate_write.sql  transaction.sql
